--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 <body>
   <div class="wrap">
     <div class="masthead">The Transformer Times</div>
-    <div class="mast-sub">an AI mini-newspaper of games & demos</div>
+    <div class="mast-sub">A mini-newspaper of AI games & demos</div>
 
     <header>
       <h1>Predict the Prompt <span class="pill">+ Thought Playback</span></h1>
